# pandoc-anki

./: .gitignore  README.md  filenames.txt  makefile  pandoc-anki.cabal  stack.yaml
data/: preamble.tex  tikz_preamble.tex
examples/: Algebra.org  anki.css  anki.csv  beamer_modern.org  makefile
src/: Main.hs  UsageCLI.hs  Utils.hs
src/Backend/CrowdAnki/: Deck.hs  DeckConfig.hs  Note.hs  NoteModel.hs  Render.hs  Test.hs
src/Deck/: Parse.hs  Render.hs  RenderCSV.hs  RenderCommon.hs  RenderJSON.hs
src/Deck/CSV/: Render.hs
src/Deck/Crowd/: Deck.hs  DeckConfig.hs  Note.hs  NoteModel.hs  Test.hs
src/Deck/CrowdAnki/: Deck.hs  DeckConfig.hs  Note.hs  NoteModel.hs  Render.hs  Test.hs
src/Deck/Internal/: Render.hs
src/Internal/: Parse.hs
src/MindMap/: Print.hs
