name:                pandoc-anki
version:             0.1.0.0
synopsis:            Generate a mindmap from an org-mode file, complete with latex annotations
description:         Please see README.md
homepage:            https://github.com/vzaccaria/pandoc-anki
license:             BSD3
license-file:        LICENSE
author:              Vittorio Zaccaria
maintainer:          vittorio.zaccaria@gmail.com
copyright:           2016 - Vittorio Zaccaria
category:            Productivity
build-type:          Simple
cabal-version:       >=1.10

executable pandoc-anki
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules: Backend.CrowdAnki.Deck
                 Backend.CrowdAnki.DeckConfig
                 Backend.CrowdAnki.Note
                 Backend.CrowdAnki.NoteModel
                 Backend.CrowdAnki.Render
                 Internal.Parse
                 UsageCLI
                 Utils
  build-depends:       base >= 4.7 && < 5
                     , pandoc
                     , pandoc-types
                     , interpolate
                     , process
                     , directory
                     , mtl
                     , containers
                     , docopt
                     , system-filepath
                     , text
                     , split
                     , data-default
                     , aeson
                     , bytestring
                     , uuid
                     , aeson-pretty
                     , MonadRandom 

